--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "safeCorierAPIv2",
-  "version": "2",
+  "version": "2.0.0",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "run": "nodemon index.js",
     "start": "node index.js"
+  },
+  "engines": {
+    "node": "12.21.0"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
